Make sure `h1` heading is always aligned to center

--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,7 @@ h1 {
   font-size: 1.5em;
   font-weight: 600;
   letter-spacing: 0.01em;
+  text-align: center;
 }
 
 #controls {
